separated FTP, FULBUF and VID users

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,9 +4,9 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
-sim-time-limit=10s
 warmup-period=0s
-repeat = 20
+sim-time-limit=10s
+repeat = 1
 **.routingRecorder.enabled = false
 
 ### Statistics.
@@ -45,19 +45,27 @@ network=FrequencyNetwork
 **.numBands = 6
 
 ### Number of UEs.
-*.numUeCellTx_CBR = 0
-*.numUeCellRx_CBR = 0
+*.numUeCellTx_FTP = 0
+*.numUeCellRx_FTP = 0
 *.numUeCellTx_VoIP = 0
 *.numUeCellRx_VoIP = 0
 *.numUeCellTx_vid = 0
 *.numUeCellRx_vid = 0
+*.numUeCellTx_CBR = 0
+*.numUeCellRx_CBR = 0
+*.numUeCellTx_FULBUF = 0
+*.numUeCellRx_FULBUF = 0
 
-*.numUeD2DTx_CBR = 0
-*.numUeD2DRx_CBR = 0
+*.numUeD2DTx_FTP = 0
+*.numUeD2DRx_FTP = 0
 *.numUeD2DTx_VoIP = 0
 *.numUeD2DRx_VoIP = 0
 *.numUeD2DTx_vid = 0
 *.numUeD2DRx_vid = 0
+*.numUeD2DTx_CBR = 0
+*.numUeD2DRx_CBR = 0
+*.numUeD2DTx_FULBUF = 0
+*.numUeD2DRx_FULBUF = 0
 
 ### Positioning.
 *.eNodeB.mobility.initialX = 300m
@@ -92,124 +100,85 @@ network=FrequencyNetwork
 
 *.ue*_VoIP[*].numUdpApps = 1
 *.ue*_vid[*].numUdpApps = 1
-*.ue*_CBR[*].numTcpApps = 1
+*.ue*_FTP[*].numTcpApps = 1
 
-# CBR senders.
-**.ue*Tx_CBR[*].tcpApp[*].typename = "TCPSessionApp"
-**.ue*Tx_CBR[*].tcpApp[0].connectPort = 1000
-**.ue*Tx_CBR[*].tcpApp[*].localPort = 1000
-**.ue*Tx_CBR[*].tcpApp[*].sendBytes = 1GiB
-**.ue*Tx_CBR[*].tcpApp[0].active = true
-**.ue*Tx_CBR[*].tcpApp[0].tOpen = 0.01s 
-**.ue*Tx_CBR[*].tcpApp[0].tSend = 1ms 
-**.ueCellTx_CBR[*].tcpApp[0].connectAddress = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
-**.ueCellTx_CBR[*].tcpApp[0].localAddress = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx_CBR[*].tcpApp[0].connectAddress = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx_CBR[*].tcpApp[0].localAddress = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
- 
-# CBR receivers
-**.ue*Rx_CBR[*].tcpApp[0].typename = "TCPSinkApp"
-**.ue*Rx_CBR[*].tcpApp[0].localPort = 1000
+# FTP senders.
+**.ue*Tx_FTP[*].tcpApp[*].typename = "TCPSessionApp"
+**.ue*Tx_FTP[*].tcpApp[0].connectPort = 1000
+**.ue*Tx_FTP[*].tcpApp[*].localPort = 1000
+**.ue*Tx_FTP[*].tcpApp[*].sendBytes = 1GiB
+**.ue*Tx_FTP[*].tcpApp[0].active = true
+**.ue*Tx_FTP[*].tcpApp[0].tOpen = 0.01s 
+**.ue*Tx_FTP[*].tcpApp[0].tSend = 1ms 
+**.ueCellTx_FTP[*].tcpApp[0].connectAddress = "ueCellRx_FTP[" + string(ancestorIndex(1)) + "]"
+**.ueCellTx_FTP[*].tcpApp[0].localAddress = "ueCellRx_FTP[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_FTP[*].tcpApp[0].connectAddress = "ueD2DRx_FTP[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_FTP[*].tcpApp[0].localAddress = "ueD2DRx_FTP[" + string(ancestorIndex(1)) + "]"
+# FTP receivers
+**.ue*Rx_FTP[*].tcpApp[0].typename = "TCPSinkApp"
+**.ue*Rx_FTP[*].tcpApp[0].localPort = 1000
 
-#**.ueCellTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
-#**.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
-#**.ueCellTx_CBR[*].udpApp[0].destPort = 1000
-#**.ueCellTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval = 0.2s}
-#**.ueCellTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize = 50B} # 2kbps
-## Cellular CBR receivers.
+# CBR Senders
+**.ue*Tx_CBR[*].udpApp[0].typename = "UDPBasicApp"
+**.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ue*Tx_CBR[*].udpApp[0].destPort = 1000
+**.ue*Tx_CBR[*].udpApp[0].sendInterval = 0.2s
+**.ue*Tx_CBR[*].udpApp[0].messageLength = 50B # 2kbps
+## CBR receivers.
+**.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
+**.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
 
-
-# Cellular VoIP senders.
-*.ueTx_VoIP[*].udpApp[0].typename = "VoIPSender"
-*.ueCellTx_VoIP[*].udpApp[0].localPort = 3088 
-*.ueCellTx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
-*.ueCellTx_VoIP[*].udpApp[0].destAddress = "ueCellRx_VoIP[" + string(ancestorIndex(1)) + "]"
-*.ueCellTx_VoIP[*].udpApp[0].destPort = 3000
-# Cellular VoIP receivers.
-*.ueCellRx_VoIP[*].udpApp[*].typename = "VoIPReceiver"
-*.ueCellRx_VoIP[*].udpApp[*].localPort = 3000
-
-# Cellular video senders.
-**.ueCellTx_vid[*].udpApp[0].typename = "UDPBasicApp"
-**.ueCellTx_vid[*].udpApp[0].destAddresses = "ueCellRx_vid[" + string(ancestorIndex(1)) + "]"
-**.ueCellTx_vid[*].udpApp[0].destPort = 5000
-**.ueCellTx_vid[*].udpApp[0].sendInterval = 1s 
-**.ueCellTx_vid[*].udpApp[0].messageLength = 30250B # 242kbps
-# Cellular video receivers.
-**.ueCellRx_vid[*].udpApp[0].typename = "UDPSink"
-**.ueCellRx_vid[*].udpApp[0].localPort = 5000
-
-
-# D2D CBR senders.
-#**.ueD2DTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
-#**.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
-#**.ueD2DTx_CBR[*].udpApp[0].destPort = 1000
-#**.ueD2DTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval}
-#**.ueD2DTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize} # 2kbps
-# D2D CBR receivers.
-#**.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
-#**.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
-
-# D2D VoIP senders.
-*.ueD2DTx_VoIP[*].udpApp[0].typename = "VoIPSender"
-*.ueD2DTx_VoIP[*].udpApp[0].localPort = 3088 
-*.ueD2DTx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
+# VoIP senders.
+*.ue*Tx_VoIP[*].udpApp[0].typename = "VoIPSender"
+*.ue*Tx_VoIP[*].udpApp[0].localPort = 3088 
+*.ue*Tx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
 *.ueD2DTx_VoIP[*].udpApp[0].destAddress = "ueD2DRx_VoIP[" + string(ancestorIndex(1)) + "]"
-*.ueD2DTx_VoIP[*].udpApp[0].destPort = 3000
-# D2D VoIP receivers.
-*.ueD2DRx_VoIP[*].udpApp[*].typename = "VoIPReceiver"
-*.ueD2DRx_VoIP[*].udpApp[*].localPort = 3000
-
-# D2D video senders.
-**.ueD2DTx_vid[*].udpApp[0].typename = "UDPBasicApp"
-**.ueD2DTx_vid[*].udpApp[0].destAddresses = "ueD2DRx_vid[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx_vid[*].udpApp[0].destPort = 5000
-**.ueD2DTx_vid[*].udpApp[0].sendInterval = 1s 
-**.ueD2DTx_vid[*].udpApp[0].messageLength = 30250B # 242kbps
-# D2D video receivers.
-**.ueD2DRx_vid[*].udpApp[0].typename = "UDPSink"
-**.ueD2DRx_vid[*].udpApp[0].localPort = 5000
+*.ueCellTx_VoIP[*].udpApp[0].destAddress = "ueCellRx_VoIP[" + string(ancestorIndex(1)) + "]"
+*.ue*Tx_VoIP[*].udpApp[0].destPort = 3000
+# VoIP receivers.
+*.ue*Rx_VoIP[*].udpApp[*].typename = "VoIPReceiver"
+*.ue*Rx_VoIP[*].udpApp[*].localPort = 3000
 
 
-#### UDP FULL BUFFER TRAFFIC ###
-#[Config TrafficUDPFullBuffer]
-#extends=Base
-#
-#*.ue*[*].numUdpApps = 1
-#
-#**.ueCell[*].udpApp[0].typename = "UDPBasicApp"
-#**.ueCell[*].udpApp[0].destAddresses = "CBRServer"
-#**.ueCell[*].udpApp[0].destPort = 1000
-#**.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-#**.ueCell[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
-#
-#**.ueD2DTx[*].udpApp[0].typename = "UDPBasicApp"
-#**.ueD2DTx[*].udpApp[*].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-#**.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-#**.ueD2DTx[*].udpApp[0].destPort = 1000
-#**.ueD2DTx[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-#**.ueD2DTx[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
-#
-#**.ueD2DRx[*].udpApp[0].typename = "UDPSink"
-#**.ueD2DRx[*].udpApp[0].localPort = 1000
-#
-#**.CBRServer.numUdpApps = 1
-#**.CBRServer.udpApp[0].typename = "UDPSink"
-#**.CBRServer.udpApp[0].localPort = 1000
+# Video senders/servers.
+**.ue*Tx_vid[*].udpApp[*].typename = "UDPVideoStreamSvr"
+**.ue*Tx_vid[*].udpApp[*].videoSize = 1GiB
+**.ue*Tx_vid[*].udpApp[*].localPort = 3088
+**.ue*Tx_vid[*].udpApp[*].sendInterval = 10ms
+**.ue*Tx_vid[*].udpApp[*].packetLen = 1000B
+# Video receivers/clients.
+**.ue*Rx_vid[*].udpApp[0].typename = "UDPVideoStreamCli"
+**.ueD2DRx_vid[*].udpApp[0].serverAddress = "ueD2DTx_vid[" + string(ancestorIndex(1)) + "]"
+**.ueCellRx_vid[*].udpApp[0].serverAddress = "ueCellTx_vid[" + string(ancestorIndex(1)) + "]"
+**.ue*Rx_vid[*].udpApp[0].localPort = 9999
+**.ue*Rx_vid[*].udpApp[0].serverPort = 3088
+**.ue*Rx_vid[*].udpApp[0].startTime = 0s
+
+## Full Buffer senders.
+**.ue*Tx_FULBUF[*].udpApp[0].typename = "UDPBasicApp"
+**.ueCellTx_FULBUF[*].udpApp[0].destAddresses = "ueCellRx_FULBUF[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_FULBUF[*].udpApp[0].destAddresses = "ueD2DRx_FULBUF[" + string(ancestorIndex(1)) + "]"
+**.ue*Tx_FULBUF[*].udpApp[0].destPort = 1000
+**.ue*Tx_FULBUF[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
+**.ue*Tx_FULBUF[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+## Full Buffer receivers.
+**.ue*Rx_FULBUF[*].udpApp[0].typename = "UDPSink"
+**.ue*Rx_FULBUF[*].udpApp[0].localPort = 1000
 
 
 [Config tuGameTest]
 extends = Base
 
-*.numUeCellTx_CBR = 10
-*.numUeCellRx_CBR = 10
+*.numUeCellTx_FTP = 10
+*.numUeCellRx_FTP = 10
 *.numUeCellTx_VoIP = 15
 *.numUeCellRx_VoIP = 15
 *.numUeCellTx_vid = 0
 *.numUeCellRx_vid = 0
 
-*.numUeD2DTx_CBR = 10
-*.numUeD2DRx_CBR = 10
+*.numUeD2DTx_FTP = 10
+*.numUeD2DRx_FTP = 10
 *.numUeD2DTx_VoIP = 15
 *.numUeD2DRx_VoIP = 15
 *.numUeD2DTx_vid = 0
@@ -247,70 +216,82 @@ extends = tuGameTest
 
 [Config parameterStudy-p]
 extends = Base
+
+sim-time-limit=10s
+repeat = 1
+
+*.numUeCellTx_FTP = 1
+*.numUeCellRx_FTP = 1
+*.numUeCellTx_VoIP = 1
+*.numUeCellRx_VoIP = 1
+*.numUeCellTx_vid = 1
+*.numUeCellRx_vid = 1
 *.numUeCellTx_CBR = 1
 *.numUeCellRx_CBR = 1
-*.numUeCellTx_VoIP = 0
-*.numUeCellRx_VoIP = 0
-*.numUeCellTx_vid = 0
-*.numUeCellRx_vid = 0
+*.numUeCellTx_FULBUF = 1
+*.numUeCellRx_FULBUF = 1
 
+*.numUeD2DTx_FTP = 1
+*.numUeD2DRx_FTP = 1
+*.numUeD2DTx_VoIP = 1
+*.numUeD2DRx_VoIP = 1
+*.numUeD2DTx_vid = 1
+*.numUeD2DRx_vid = 1
 *.numUeD2DTx_CBR = 1
 *.numUeD2DRx_CBR = 1
-*.numUeD2DTx_VoIP = 0
-*.numUeD2DRx_VoIP = 0
-*.numUeD2DTx_vid = 0
-*.numUeD2DRx_vid = 0
+*.numUeD2DTx_FULBUF = 1
+*.numUeD2DRx_FULBUF = 1
 
-*.ueCellTx_CBR[0].mobility.initialX = 275m
-*.ueCellTx_CBR[0].mobility.initialY = 275m
-*.ueCellRx_CBR[0].mobility.initialX = 325m 
-*.ueCellRx_CBR[0].mobility.initialY = 325m
+*.ueCellTx_FTP[0].mobility.initialX = 275m
+*.ueCellTx_FTP[0].mobility.initialY = 275m
+*.ueCellRx_FTP[0].mobility.initialX = 325m 
+*.ueCellRx_FTP[0].mobility.initialY = 325m
 
-*.ueCellTx_CBR[1].mobility.initialX = 275m
-*.ueCellTx_CBR[1].mobility.initialY = 285m
-*.ueCellRx_CBR[1].mobility.initialX = 325m
-*.ueCellRx_CBR[1].mobility.initialY = 335m
+*.ueCellTx_FTP[1].mobility.initialX = 275m
+*.ueCellTx_FTP[1].mobility.initialY = 285m
+*.ueCellRx_FTP[1].mobility.initialX = 325m
+*.ueCellRx_FTP[1].mobility.initialY = 335m
 
-*.ueCellTx_CBR[2].mobility.initialX = 275m
-*.ueCellTx_CBR[2].mobility.initialY = 295m
-*.ueCellRx_CBR[2].mobility.initialX = 325m
-*.ueCellRx_CBR[2].mobility.initialY = 345m
+*.ueCellTx_FTP[2].mobility.initialX = 275m
+*.ueCellTx_FTP[2].mobility.initialY = 295m
+*.ueCellRx_FTP[2].mobility.initialX = 325m
+*.ueCellRx_FTP[2].mobility.initialY = 345m
 
-*.ueCellTx_CBR[3].mobility.initialX = 275m
-*.ueCellTx_CBR[3].mobility.initialY = 265m
-*.ueCellRx_CBR[3].mobility.initialX = 325m
-*.ueCellRx_CBR[3].mobility.initialY = 315m
+*.ueCellTx_FTP[3].mobility.initialX = 275m
+*.ueCellTx_FTP[3].mobility.initialY = 265m
+*.ueCellRx_FTP[3].mobility.initialX = 325m
+*.ueCellRx_FTP[3].mobility.initialY = 315m
 
-*.ueCellTx_CBR[4].mobility.initialX = 275m
-*.ueCellTx_CBR[4].mobility.initialY = 255m
-*.ueCellRx_CBR[4].mobility.initialX = 325m
-*.ueCellRx_CBR[4].mobility.initialY = 305m
+*.ueCellTx_FTP[4].mobility.initialX = 275m
+*.ueCellTx_FTP[4].mobility.initialY = 255m
+*.ueCellRx_FTP[4].mobility.initialX = 325m
+*.ueCellRx_FTP[4].mobility.initialY = 305m
 
 
-*.ueD2DTx_CBR[0].mobility.initialX = 200m
-*.ueD2DTx_CBR[0].mobility.initialY = 275m
-*.ueD2DRx_CBR[0].mobility.initialX = 220m 
-*.ueD2DRx_CBR[0].mobility.initialY = 275m
+*.ueD2DTx_FTP[0].mobility.initialX = 200m
+*.ueD2DTx_FTP[0].mobility.initialY = 275m
+*.ueD2DRx_FTP[0].mobility.initialX = 220m 
+*.ueD2DRx_FTP[0].mobility.initialY = 275m
 
-*.ueD2DTx_CBR[1].mobility.initialX = 210m
-*.ueD2DTx_CBR[1].mobility.initialY = 265m
-*.ueD2DRx_CBR[1].mobility.initialX = 235m 
-*.ueD2DRx_CBR[1].mobility.initialY = 265m
+*.ueD2DTx_FTP[1].mobility.initialX = 210m
+*.ueD2DTx_FTP[1].mobility.initialY = 265m
+*.ueD2DRx_FTP[1].mobility.initialX = 235m 
+*.ueD2DRx_FTP[1].mobility.initialY = 265m
 
-*.ueD2DTx_CBR[2].mobility.initialX = 220m
-*.ueD2DTx_CBR[2].mobility.initialY = 255m
-*.ueD2DRx_CBR[2].mobility.initialX = 250m 
-*.ueD2DRx_CBR[2].mobility.initialY = 255m
+*.ueD2DTx_FTP[2].mobility.initialX = 220m
+*.ueD2DTx_FTP[2].mobility.initialY = 255m
+*.ueD2DRx_FTP[2].mobility.initialX = 250m 
+*.ueD2DRx_FTP[2].mobility.initialY = 255m
 
-*.ueD2DTx_CBR[3].mobility.initialX = 230m
-*.ueD2DTx_CBR[3].mobility.initialY = 245m
-*.ueD2DRx_CBR[3].mobility.initialX = 265m 
-*.ueD2DRx_CBR[3].mobility.initialY = 245m
+*.ueD2DTx_FTP[3].mobility.initialX = 230m
+*.ueD2DTx_FTP[3].mobility.initialY = 245m
+*.ueD2DRx_FTP[3].mobility.initialX = 265m 
+*.ueD2DRx_FTP[3].mobility.initialY = 245m
 
-*.ueD2DTx_CBR[4].mobility.initialX = 240m
-*.ueD2DTx_CBR[4].mobility.initialY = 235m
-*.ueD2DRx_CBR[4].mobility.initialX = 280m 
-*.ueD2DRx_CBR[4].mobility.initialY = 235m
+*.ueD2DTx_FTP[4].mobility.initialX = 240m
+*.ueD2DTx_FTP[4].mobility.initialY = 235m
+*.ueD2DRx_FTP[4].mobility.initialX = 280m 
+*.ueD2DRx_FTP[4].mobility.initialY = 235m
 
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
@@ -322,23 +303,23 @@ output-vector-file = ${resultdir}/${configname}/p${p}_rep${repetition}.vec
 
 [Config d2dVsCell]
 extends = Base
-*.numUeCellTx_CBR = 1
-*.numUeCellRx_CBR = 1
-*.numUeD2DTx_CBR = 1
-*.numUeD2DRx_CBR = 1
+*.numUeCellTx_FTP = 1
+*.numUeCellRx_FTP = 1
+*.numUeD2DTx_FTP = 1
+*.numUeD2DRx_FTP = 1
 
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.ueD2DTx_CBR[0].mobility.initialX = 350m
-*.ueD2DTx_CBR[0].mobility.initialY = 350m
-*.ueD2DRx_CBR[0].mobility.initialX = 350m + ${d=10..50 step 10}m 
-*.ueD2DRx_CBR[0].mobility.initialY = 350m
+*.ueD2DTx_FTP[0].mobility.initialX = 350m
+*.ueD2DTx_FTP[0].mobility.initialY = 350m
+*.ueD2DRx_FTP[0].mobility.initialX = 350m + ${d=10..50 step 10}m 
+*.ueD2DRx_FTP[0].mobility.initialY = 350m
 
-*.ueCellTx_CBR[0].mobility.initialX = 300m - ${d}m
-*.ueCellTx_CBR[0].mobility.initialY = 300m
-*.ueCellRx_CBR[0].mobility.initialX = 310m
-*.ueCellRx_CBR[0].mobility.initialY = 300m
+*.ueCellTx_FTP[0].mobility.initialX = 300m - ${d}m
+*.ueCellTx_FTP[0].mobility.initialY = 300m
+*.ueCellRx_FTP[0].mobility.initialX = 310m
+*.ueCellRx_FTP[0].mobility.initialY = 300m
 
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/d${d}_rep${repetition}.sca
@@ -350,3 +331,5 @@ output-scalar-file = ${resultdir}/${configname}/d${d}_rep${repetition}.sca
 extends = d2dVsCell
 **.schedulingDisciplineUl = "PROPFAIR"
 **.schedulingDisciplineDl = "PROPFAIR"
+
+
