prepared TUGAME-VoIP-D2D_only and TUGAME-Vid-D2D_only configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -73,7 +73,7 @@ network=FrequencyNetwork
 
 *.ueCell*[*].mobility.initialX = uniform(275m,325m)
 *.ueCell*[*].mobility.initialY = uniform(325m,375m) # max ~70m distance
-*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
+*.ueD2D*[*].mobility.initialX = uniform(290m,310m) # max 22,360679775m distance
 *.ueD2D*[*].mobility.initialY = uniform(340m,350m)
 
 ### Default scheduling discipline.
@@ -333,3 +333,25 @@ extends = d2dVsCell
 **.schedulingDisciplineDl = "PROPFAIR"
 
 
+[Config TUGAME-VoIP-D2D_only]
+extends=Base
+*.numUeD2DTx_VoIP = 1
+*.numUeD2DRx_VoIP = 1
+*.numUeD2DTx_vid = 0
+*.numUeD2DRx_vid = 0
+*.numUeD2DTx_FULBUF = ${numFB=1..10 step 1}
+*.numUeD2DRx_FULBUF = 0
+sim-time-limit=60s
+repeat = 20
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+[Config TUGAME-Vid-D2D_only]
+extends=TUGAME-VoIP-D2D_only
+*.numUeD2DTx_VoIP = 0
+*.numUeD2DRx_VoIP = 0
+*.numUeD2DTx_vid = 1
+*.numUeD2DRx_vid = 1
