--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -348,6 +348,7 @@ repeat = 20
 **.deployer.numRbUl = ${numRBs}
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
+**.vector-recording = false
 
 [Config TUGAME-Vid-D2D_only]
 extends=TUGAME-VoIP-D2D_only
