had forgot proper output filenames

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -349,6 +349,7 @@ repeat = 20
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
 **.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/n${numFB}_rep${repetition}.sca
 
 [Config TUGAME-Vid-D2D_only]
 extends=TUGAME-VoIP-D2D_only
