hadn't configured numUdpApps for new UEs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -8,6 +8,7 @@ warmup-period=0s
 sim-time-limit=10s
 repeat = 1
 **.routingRecorder.enabled = false
+cmdenv-stop-batch-on-error = true
 
 ### Statistics.
 output-scalar-file = ${resultdir}/${configname}/rep${repetition}.sca
@@ -34,7 +35,6 @@ seed-set = ${repetition}
 
 ############### AMC MODULE PARAMETERS ###############
 **.rbAllocationType = "localized"
-
 
 ### BASE CONFIGURATION ###
 [Config Base]
@@ -66,6 +66,11 @@ network=FrequencyNetwork
 *.numUeD2DRx_CBR = 0
 *.numUeD2DTx_FULBUF = 0
 *.numUeD2DRx_FULBUF = 0
+
+### Transmission power.
+**.ue*[*].nic.phy.ueTxPower = 26 # dBm
+**.ue*[*].nic.phy.d2dTxPower = 26 # dBm
+**.eNodeBTxPower = 46 # dBm
 
 ### Positioning.
 *.eNodeB.mobility.initialX = 300m
@@ -100,6 +105,8 @@ network=FrequencyNetwork
 
 *.ue*_VoIP[*].numUdpApps = 1
 *.ue*_vid[*].numUdpApps = 1
+*.ue*_CBR[*].numUdpApps = 1
+*.ue*_FULBUF[*].numUdpApps = 1
 *.ue*_FTP[*].numTcpApps = 1
 
 # FTP senders.
@@ -357,3 +364,61 @@ extends=TUGAME-VoIP-D2D_only
 *.numUeD2DRx_VoIP = 0
 *.numUeD2DTx_vid = 1
 *.numUeD2DRx_vid = 1
+
+
+[Config channel_gain_d2d]
+extends=Base
+*.numUeD2DTx_VoIP = 1
+*.numUeD2DRx_VoIP = 1
+
+sim-time-limit=1s
+repeat = 10
+
+**.ueTxPower = 26
+**.d2dTxPower = 26
+
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+*.ueD2DTx_VoIP[0].mobility.initialX = 310m
+*.ueD2DTx_VoIP[0].mobility.initialY = 310m
+*.ueD2DRx_VoIP[0].mobility.initialX = 310m + ${d=5..100 step 5}m
+*.ueD2DRx_VoIP[0].mobility.initialY = 310m 
+
+[Config channel_gain_cell]
+extends=Base
+*.numUeCellTx_VoIP = 1
+*.numUeCellRx_VoIP = 1
+
+sim-time-limit=1s
+repeat = 10
+
+**.ueTxPower = 26
+**.d2dTxPower = 26
+
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+*.ueCellTx_VoIP[0].mobility.initialX = 310m
+*.ueCellTx_VoIP[0].mobility.initialY = 310m
+*.ueCellRx_VoIP[0].mobility.initialX = 310m + ${d=5..100 step 5}m
+*.ueCellRx_VoIP[0].mobility.initialY = 310m
+
+[Config channel_gain_enb]
+extends=Base
+*.numUeCellTx_FULBUF = 1
+*.numUeCellRx_FULBUF = 1
+
+sim-time-limit=1s
+repeat = 1
+
+**.ueTxPower = 26
+**.d2dTxPower = 26
+
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+*.ueCellTx_FULBUF[0].mobility.initialX = 300m + ${d=5..100 step 5}m
+*.ueCellTx_FULBUF[0].mobility.initialY = 300m
+*.ueCellRx_FULBUF[0].mobility.initialX = 300m
+*.ueCellRx_FULBUF[0].mobility.initialY = 300m
