had forgot receivers

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -347,7 +347,7 @@ extends=Base
 *.numUeD2DTx_vid = 0
 *.numUeD2DRx_vid = 0
 *.numUeD2DTx_FULBUF = ${numFB=1..10 step 1}
-*.numUeD2DRx_FULBUF = 0
+*.numUeD2DRx_FULBUF = ${numFB}
 sim-time-limit=60s
 repeat = 20
 **.numBands = ${numRBs = 6}
