prepared PF and RR configs for TUGAME-{VoIP,Vid}

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -358,12 +358,33 @@ repeat = 20
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${numFB}_rep${repetition}.sca
 
+[Config TUGAME-VoIP-D2D_only-PF]
+extends=TUGAME-VoIP-D2D_only
+**.schedulingDisciplineUl = "PROPFAIR"
+**.schedulingDisciplineDl = "PROPFAIR"
+
+[Config TUGAME-VoIP-D2D_only-RR]
+extends=TUGAME-VoIP-D2D_only
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+
 [Config TUGAME-Vid-D2D_only]
 extends=TUGAME-VoIP-D2D_only
 *.numUeD2DTx_VoIP = 0
 *.numUeD2DRx_VoIP = 0
 *.numUeD2DTx_vid = 1
 *.numUeD2DRx_vid = 1
+
+[Config TUGAME-Vid-D2D_only-PF]
+extends=TUGAME-Vid-D2D_only
+**.schedulingDisciplineUl = "PROPFAIR"
+**.schedulingDisciplineDl = "PROPFAIR"
+
+[Config TUGAME-Vid-D2D_only-RR]
+extends=TUGAME-Vid-D2D_only
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
 [Config channel_gain_d2d]
