{TUGame,RR,PF}-D2D configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -443,3 +443,32 @@ repeat = 10
 *.ueCellTx_FULBUF[0].mobility.initialY = 300m
 *.ueCellRx_FULBUF[0].mobility.initialX = 300m
 *.ueCellRx_FULBUF[0].mobility.initialY = 300m
+
+
+[Config TUGame-D2D]
+extends=Base
+*.numUeD2DTx_VoIP = ${n=5..15 step 1}
+*.numUeD2DRx_VoIP = ${n}
+*.numUeD2DTx_vid = 0
+*.numUeD2DRx_vid = 0
+*.numUeD2DTx_FULBUF = 0
+*.numUeD2DRx_FULBUF = 0
+sim-time-limit=60s
+repeat = 20
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+**.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
+
+[Config RR-D2D]
+extends = TUGame-D2D
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config PF-D2D]
+extends = TUGame-D2D
+**.schedulingDisciplineUl = "PROPFAIR"
+**.schedulingDisciplineDl = "PROPFAIR"
