{TU,RR,PF}-D2D-largearea configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -472,3 +472,19 @@ extends = TUGame-D2D
 extends = TUGame-D2D
 **.schedulingDisciplineUl = "PROPFAIR"
 **.schedulingDisciplineDl = "PROPFAIR"
+
+
+[Config TU-D2D-largearea]
+extends = TUGame-D2D
+*.ueD2D*[*].mobility.initialX = uniform(280m,300m) # max 92,195m distance
+*.ueD2D*[*].mobility.initialY = uniform(350m,360m)
+
+[Config RR-D2D-largearea]
+extends = TU-D2D-largearea
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config PF-D2D-largearea]
+extends = TU-D2D-largearea
+**.schedulingDisciplineUl = "PROPFAIR"
+**.schedulingDisciplineDl = "PROPFAIR"
