--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -488,3 +488,10 @@ extends = TU-D2D-largearea
 extends = TU-D2D-largearea
 **.schedulingDisciplineUl = "PROPFAIR"
 **.schedulingDisciplineDl = "PROPFAIR"
+
+
+[Config stackelbergtest]
+extends = Base
+sim-time-limit=5s
+**.schedulingDisciplineUl = "STACKELBERG"
+**.schedulingDisciplineDl = "STACKELBERG"
