stackelberg test config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -304,6 +304,7 @@ repeat = 1
 **.schedulingDisciplineDl = "TU_GAME"
 
 *.oracle.d2dPenalty = ${p=0..1 step 0.1}
+
 output-scalar-file = ${resultdir}/${configname}/p${p}_rep${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/p${p}_rep${repetition}.vec
 
@@ -493,5 +494,23 @@ extends = TU-D2D-largearea
 [Config stackelbergtest]
 extends = Base
 sim-time-limit=5s
-**.schedulingDisciplineUl = "STACKELBERG"
-**.schedulingDisciplineDl = "STACKELBERG"
+*.numUeD2DTx_FULBUF = 1
+*.numUeD2DRx_FULBUF = 1
+*.numUeCellTx_FULBUF = 1
+*.numUeCellRx_FULBUF = 1
+
+*.ueCellTx_FULBUF[0].mobility.initialX = 350m
+*.ueCellTx_FULBUF[0].mobility.initialY = 300m
+*.ueCellRx_FULBUF[0].mobility.initialX = 360m
+*.ueCellRx_FULBUF[0].mobility.initialY = 300m
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = 150m
+*.ueD2DTx_FULBUF[0].mobility.initialY = 300m
+*.ueD2DRx_FULBUF[0].mobility.initialX = 160m
+*.ueD2DRx_FULBUF[0].mobility.initialY = 300m
+
+**.oracle.d2dPowerLimit_max = 398 # in mW, equals 26dBm
+**.oracle.d2dPowerLimit_min = 100 # 20 dBm
+
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
