--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -514,3 +514,31 @@ sim-time-limit=5s
 
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+
+[Config stackelcompare_rr_random]
+extends = Base
+sim-time-limit=3s
+repeat = 20
+*.ueD2D*[*].mobility.initialX = uniform(270m,295m) 
+*.ueD2D*[*].mobility.initialY = uniform(250m,275m)
+*.ueCell*[*].mobility.initialX = uniform(250m,350m)
+*.ueCell*[*].mobility.initialY = uniform(300m,400m)
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+
+*.numUeD2DTx_FULBUF = ${n=2..2 step 5}
+*.numUeD2DRx_FULBUF = ${n}
+*.numUeCellTx_FULBUF = ${n}
+*.numUeCellRx_FULBUF = ${n}
+**.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
+
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN_REUSE"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config stackelcompare_rr_sta]
+extends = stackelcompare_rr_random
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
