more realistic TU demands

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -130,8 +130,8 @@ network=FrequencyNetwork
 **.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
 **.ue*Tx_CBR[*].udpApp[0].destPort = 1000
-**.ue*Tx_CBR[*].udpApp[0].sendInterval = 0.2s
-**.ue*Tx_CBR[*].udpApp[0].messageLength = 50B # 2kbps
+**.ue*Tx_CBR[*].udpApp[0].sendInterval = 0.05s
+**.ue*Tx_CBR[*].udpApp[0].messageLength = 1000B # 1kB every 50ms = 160kbps
 ## CBR receivers.
 **.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
@@ -153,7 +153,7 @@ network=FrequencyNetwork
 **.ue*Tx_vid[*].udpApp[*].videoSize = 1GiB
 **.ue*Tx_vid[*].udpApp[*].localPort = 3088
 **.ue*Tx_vid[*].udpApp[*].sendInterval = 10ms
-**.ue*Tx_vid[*].udpApp[*].packetLen = 1000B
+**.ue*Tx_vid[*].udpApp[*].packetLen = 3750B # 3750B/10ms = 375000B/s = 3000kbps (720p video)
 # Video receivers/clients.
 **.ue*Rx_vid[*].udpApp[0].typename = "UDPVideoStreamCli"
 **.ueD2DRx_vid[*].udpApp[0].serverAddress = "ueD2DTx_vid[" + string(ancestorIndex(1)) + "]"
@@ -168,7 +168,7 @@ network=FrequencyNetwork
 **.ueD2DTx_FULBUF[*].udpApp[0].destAddresses = "ueD2DRx_FULBUF[" + string(ancestorIndex(1)) + "]"
 **.ue*Tx_FULBUF[*].udpApp[0].destPort = 1000
 **.ue*Tx_FULBUF[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-**.ue*Tx_FULBUF[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+**.ue*Tx_FULBUF[*].udpApp[0].messageLength = 50B  # 100B/ms = 100000B/s = 800 kbps
 ## Full Buffer receivers.
 **.ue*Rx_FULBUF[*].udpApp[0].typename = "UDPSink"
 **.ue*Rx_FULBUF[*].udpApp[0].localPort = 1000
