fix some bugs; lots of eval

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -347,15 +347,15 @@ extends=Base
 *.numUeD2DRx_VoIP = 1
 *.numUeD2DTx_vid = 0
 *.numUeD2DRx_vid = 0
-*.numUeD2DTx_FULBUF = ${numFB=1..10 step 1}
+*.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
 *.numUeD2DRx_FULBUF = ${numFB}
-sim-time-limit=60s
-repeat = 20
+sim-time-limit=15s
+repeat = 30
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 **.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "TU_GAME"
+**.schedulingDisciplineDl = "PROPFAIR"
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${numFB}_rep${repetition}.sca
 
@@ -518,8 +518,8 @@ sim-time-limit=5s
 
 [Config stackelcompare_rr_random]
 extends = Base
-sim-time-limit=15s
-repeat = 30
+sim-time-limit=3s
+repeat = 20
 *.ueD2D*[*].mobility.initialX = uniform(270m,295m) 
 *.ueD2D*[*].mobility.initialY = uniform(250m,275m)
 *.ueCell*[*].mobility.initialX = uniform(250m,350m)
@@ -528,7 +528,7 @@ repeat = 30
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 
-*.numUeD2DTx_FULBUF = ${n=5..25 step 5}
+*.numUeD2DTx_FULBUF = ${n=6..10 step 2}
 *.numUeD2DRx_FULBUF = ${n}
 *.numUeCellTx_FULBUF = ${n}
 *.numUeCellRx_FULBUF = ${n}
@@ -541,4 +541,9 @@ output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 [Config stackelcompare_rr_sta]
 extends = stackelcompare_rr_random
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config stackelcompare_rr_noreuse]
+extends = stackelcompare_rr_random
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
