--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -518,17 +518,17 @@ sim-time-limit=5s
 
 [Config stackelcompare_rr_random]
 extends = Base
-sim-time-limit=3s
-repeat = 20
-*.ueD2D*[*].mobility.initialX = uniform(270m,295m) 
-*.ueD2D*[*].mobility.initialY = uniform(250m,275m)
-*.ueCell*[*].mobility.initialX = uniform(250m,350m)
-*.ueCell*[*].mobility.initialY = uniform(300m,400m)
+sim-time-limit=15s
+repeat = 30
+*.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
+*.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
+*.ueCell*[*].mobility.initialX = uniform(150m,250m)
+*.ueCell*[*].mobility.initialY = uniform(400m,500m)
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 
-*.numUeD2DTx_FULBUF = ${n=6..10 step 2}
+*.numUeD2DTx_FULBUF = ${n=5..25 step 5}
 *.numUeD2DRx_FULBUF = ${n}
 *.numUeCellTx_FULBUF = ${n}
 *.numUeCellRx_FULBUF = ${n}
