prepared stackelcompare_tu_*

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -5,7 +5,7 @@ output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
 warmup-period=0s
-sim-time-limit=10s
+sim-time-limit=3s
 repeat = 1
 **.routingRecorder.enabled = false
 cmdenv-stop-batch-on-error = true
@@ -75,11 +75,10 @@ network=FrequencyNetwork
 ### Positioning.
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
-
-*.ueCell*[*].mobility.initialX = uniform(275m,325m)
-*.ueCell*[*].mobility.initialY = uniform(325m,375m) # max ~70m distance
-*.ueD2D*[*].mobility.initialX = uniform(290m,310m) # max 22,360679775m distance
-*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
+*.ueD2D*[*].mobility.initialX = uniform(185m,205m) 
+*.ueD2D*[*].mobility.initialY = uniform(435m,460m) 
+*.ueCell*[*].mobility.initialX = uniform(150m,250m)
+*.ueCell*[*].mobility.initialY = uniform(400m,500m)
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -349,13 +348,13 @@ extends=Base
 *.numUeD2DRx_vid = 0
 *.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
 *.numUeD2DRx_FULBUF = ${numFB}
-sim-time-limit=15s
+sim-time-limit=3s
 repeat = 30
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 **.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "PROPFAIR"
+**.schedulingDisciplineDl = "TU_GAME"
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${numFB}_rep${repetition}.sca
 
@@ -388,137 +387,9 @@ extends=TUGAME-Vid-D2D_only
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
-[Config channel_gain_d2d]
-extends=Base
-*.numUeD2DTx_VoIP = 1
-*.numUeD2DRx_VoIP = 1
-
-sim-time-limit=1s
-repeat = 10
-
-**.ueTxPower = 26
-**.d2dTxPower = 26
-
-**.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "TU_GAME"
-
-*.ueD2DTx_VoIP[0].mobility.initialX = 310m
-*.ueD2DTx_VoIP[0].mobility.initialY = 310m
-*.ueD2DRx_VoIP[0].mobility.initialX = 310m + ${d=5..100 step 5}m
-*.ueD2DRx_VoIP[0].mobility.initialY = 310m 
-
-[Config channel_gain_cell]
-extends=Base
-*.numUeCellTx_VoIP = 1
-*.numUeCellRx_VoIP = 1
-
-sim-time-limit=1s
-repeat = 10
-
-**.ueTxPower = 26
-**.d2dTxPower = 26
-
-**.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "TU_GAME"
-
-*.ueCellTx_VoIP[0].mobility.initialX = 310m
-*.ueCellTx_VoIP[0].mobility.initialY = 310m
-*.ueCellRx_VoIP[0].mobility.initialX = 310m + ${d=5..100 step 5}m
-*.ueCellRx_VoIP[0].mobility.initialY = 310m
-
-[Config channel_gain_enb]
-extends=Base
-*.numUeCellTx_FULBUF = 1
-*.numUeCellRx_FULBUF = 1
-
-sim-time-limit=1s
-repeat = 10
-
-**.ueTxPower = 26
-**.d2dTxPower = 26
-
-**.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "TU_GAME"
-
-*.ueCellTx_FULBUF[0].mobility.initialX = 300m + ${d=5..100 step 5}m
-*.ueCellTx_FULBUF[0].mobility.initialY = 300m
-*.ueCellRx_FULBUF[0].mobility.initialX = 300m
-*.ueCellRx_FULBUF[0].mobility.initialY = 300m
-
-
-[Config TUGame-D2D]
-extends=Base
-*.numUeD2DTx_VoIP = ${n=5..15 step 1}
-*.numUeD2DRx_VoIP = ${n}
-*.numUeD2DTx_vid = 0
-*.numUeD2DRx_vid = 0
-*.numUeD2DTx_FULBUF = 0
-*.numUeD2DRx_FULBUF = 0
-sim-time-limit=60s
-repeat = 20
-**.numBands = ${numRBs = 6}
-**.deployer.numRbDl = ${numRBs}
-**.deployer.numRbUl = ${numRBs}
-**.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "TU_GAME"
-**.vector-recording = false
-output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
-
-[Config RR-D2D]
-extends = TUGame-D2D
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-
-[Config PF-D2D]
-extends = TUGame-D2D
-**.schedulingDisciplineUl = "PROPFAIR"
-**.schedulingDisciplineDl = "PROPFAIR"
-
-
-[Config TU-D2D-largearea]
-extends = TUGame-D2D
-*.ueD2D*[*].mobility.initialX = uniform(280m,350m) # max 92,195m distance
-*.ueD2D*[*].mobility.initialY = uniform(300m,360m)
-
-[Config RR-D2D-largearea]
-extends = TU-D2D-largearea
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-
-[Config PF-D2D-largearea]
-extends = TU-D2D-largearea
-**.schedulingDisciplineUl = "PROPFAIR"
-**.schedulingDisciplineDl = "PROPFAIR"
-
-
-[Config stackelbergtest]
-extends = Base
-sim-time-limit=5s
-*.numUeD2DTx_FULBUF = 1
-*.numUeD2DRx_FULBUF = 1
-*.numUeCellTx_FULBUF = 1
-*.numUeCellRx_FULBUF = 1
-
-*.ueCellTx_FULBUF[0].mobility.initialX = 350m
-*.ueCellTx_FULBUF[0].mobility.initialY = 300m
-*.ueCellRx_FULBUF[0].mobility.initialX = 360m
-*.ueCellRx_FULBUF[0].mobility.initialY = 300m
-
-*.ueD2DTx_FULBUF[0].mobility.initialX = 150m
-*.ueD2DTx_FULBUF[0].mobility.initialY = 300m
-*.ueD2DRx_FULBUF[0].mobility.initialX = 160m
-*.ueD2DRx_FULBUF[0].mobility.initialY = 300m
-
-**.oracle.d2dPowerLimit_max = 398 # in mW, equals 26dBm
-**.oracle.d2dPowerLimit_min = 100 # 20 dBm
-
-**.schedulingDisciplineUl = "STACKELBERG_GAME"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-
-
 [Config stackelcompare_rr_random]
 extends = Base
-sim-time-limit=15s
+sim-time-limit=3s
 repeat = 30
 *.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
 *.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
@@ -540,6 +411,7 @@ output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 
 [Config stackelcompare_rr_sta]
 extends = stackelcompare_rr_random
+**.oracle.stackelberg_scheduleLeaders = "RR"
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
@@ -547,3 +419,28 @@ extends = stackelcompare_rr_random
 extends = stackelcompare_rr_random
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+
+[Config stackelcompare_tu_sta]
+extends = stackelcompare_rr_random
+**.oracle.stackelberg_scheduleLeaders = "TU"
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config stackelcompare_tu_random]
+extends = stackelcompare_rr_random
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config stackelcompare_tu_noreuse]
+extends = stackelcompare_rr_random
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+
+[Config stackelberg_tu_test]
+extends = stackelcompare_rr_sta
+**.oracle.stackelberg_scheduleLeaders = "TU"
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
+#**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+#**.schedulingDisciplineUl = "TU_GAME"
