--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -424,23 +424,16 @@ extends = stackelcompare_rr_random
 [Config stackelcompare_tu_sta]
 extends = stackelcompare_rr_random
 **.oracle.stackelberg_scheduleLeaders = "TU"
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_tu_random]
-extends = stackelcompare_rr_random
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+extends = stackelcompare_tu_sta
+**.schedulingDisciplineUl = "TU_GAME_RANDOMREUSE"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_tu_noreuse]
-extends = stackelcompare_rr_random
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+extends = stackelcompare_tu_sta
+**.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
-
-[Config stackelberg_tu_test]
-extends = stackelcompare_rr_sta
-**.oracle.stackelberg_scheduleLeaders = "TU"
-**.schedulingDisciplineUl = "STACKELBERG_GAME"
-#**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-#**.schedulingDisciplineUl = "TU_GAME"
