--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -348,7 +348,11 @@ extends=Base
 *.numUeD2DRx_vid = 0
 *.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
 *.numUeD2DRx_FULBUF = ${numFB}
-sim-time-limit=3s
+*.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
+*.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
+*.ueCell*[*].mobility.initialX = uniform(150m,250m)
+*.ueCell*[*].mobility.initialY = uniform(400m,500m)
+sim-time-limit=15s
 repeat = 30
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
@@ -368,23 +372,6 @@ extends=TUGAME-VoIP-D2D_only
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
-
-[Config TUGAME-Vid-D2D_only]
-extends=TUGAME-VoIP-D2D_only
-*.numUeD2DTx_VoIP = 0
-*.numUeD2DRx_VoIP = 0
-*.numUeD2DTx_vid = 1
-*.numUeD2DRx_vid = 1
-
-[Config TUGAME-Vid-D2D_only-PF]
-extends=TUGAME-Vid-D2D_only
-**.schedulingDisciplineUl = "PROPFAIR"
-**.schedulingDisciplineDl = "PROPFAIR"
-
-[Config TUGAME-Vid-D2D_only-RR]
-extends=TUGAME-Vid-D2D_only
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
 [Config stackelcompare_rr_random]
