--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -348,8 +348,10 @@ extends=Base
 *.numUeD2DRx_vid = 0
 *.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
 *.numUeD2DRx_FULBUF = ${numFB}
-*.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
-*.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
+*.ueD2DTx*[*].mobility.initialX = 175m 
+*.ueD2DTx*[*].mobility.initialY = 425m
+*.ueD2DRx*[*].mobility.initialX = 205m # 30m away 
+*.ueD2DRx*[*].mobility.initialY = 425m
 *.ueCell*[*].mobility.initialX = uniform(150m,250m)
 *.ueCell*[*].mobility.initialY = uniform(400m,500m)
 sim-time-limit=15s
