stackelcompare_modded_sta config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -426,3 +426,7 @@ extends = stackelcompare_tu_sta
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
+
+[Config stackelcompare_modded_sta]
+extends = stackelcompare_rr_sta
+**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
