--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -348,14 +348,10 @@ extends=Base
 *.numUeD2DRx_vid = 0
 *.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
 *.numUeD2DRx_FULBUF = ${numFB}
-*.ueD2DTx*[*].mobility.initialX = 175m 
-*.ueD2DTx*[*].mobility.initialY = 425m
-*.ueD2DRx*[*].mobility.initialX = 205m # 30m away 
-*.ueD2DRx*[*].mobility.initialY = 425m
-*.ueCell*[*].mobility.initialX = uniform(150m,250m)
-*.ueCell*[*].mobility.initialY = uniform(400m,500m)
-sim-time-limit=15s
-repeat = 30
+*.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
+*.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
+sim-time-limit=10s
+repeat = 10
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
@@ -430,3 +426,13 @@ extends = stackelcompare_tu_sta
 [Config stackelcompare_modded_sta]
 extends = stackelcompare_rr_sta
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+
+
+[Config throughput_d2d_cell]
+extends = Base
+*.numUeD2DTx_FULBUF = 1
+*.numUeD2DRx_FULBUF = 1
+*.numUeCellTx_FULBUF = 1
+*.numUeCellRx_FULBUF = 1
+sim-time-limit=15s
+repeat = 30
