tweaked TUGAME-VoIP-D2D_only for better positions

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -344,13 +344,11 @@ extends = d2dVsCell
 extends=Base
 *.numUeD2DTx_VoIP = 1
 *.numUeD2DRx_VoIP = 1
-*.numUeD2DTx_vid = 0
-*.numUeD2DRx_vid = 0
-*.numUeD2DTx_FULBUF = ${numFB=5..15 step 5}
-*.numUeD2DRx_FULBUF = ${numFB}
-*.ueD2D*[*].mobility.initialX = uniform(175m,205m) 
-*.ueD2D*[*].mobility.initialY = uniform(425m,460m) # d <= 46,1m
-sim-time-limit=10s
+*.numUeD2DTx_CBR = ${numFB=0..0 step 5}
+*.numUeD2DRx_CBR = ${numFB}
+*.ueD2D*[*].mobility.initialX = uniform(265m,295m) 
+*.ueD2D*[*].mobility.initialY = uniform(305m,340m) # d <= 46,1m
+sim-time-limit=15s
 repeat = 10
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
@@ -434,5 +432,24 @@ extends = Base
 *.numUeD2DRx_FULBUF = 1
 *.numUeCellTx_FULBUF = 1
 *.numUeCellRx_FULBUF = 1
-sim-time-limit=15s
+sim-time-limit=5s
 repeat = 30
+
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = 400m
+*.ueD2DTx_FULBUF[0].mobility.initialY = 400m
+*.ueD2DRx_FULBUF[0].mobility.initialX = 425m  
+*.ueD2DRx_FULBUF[0].mobility.initialY = 400m
+
+*.ueCellTx_FULBUF[0].mobility.initialX = 275m
+*.ueCellTx_FULBUF[0].mobility.initialY = 300m
+*.ueCellRx_FULBUF[0].mobility.initialX = 325m  
+*.ueCellRx_FULBUF[0].mobility.initialY = 300m
+
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+**.deployer.numRbDl = 6
+**.deployer.numRbUl = 6
+**.numBands = 6
