stackelcompare config changed positions and numUEs for more interference

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -374,15 +374,17 @@ extends=TUGAME-VoIP-D2D_only
 extends = Base
 sim-time-limit=15s
 repeat = 10
-*.ueD2D*[*].mobility.initialX = uniform(265m,295m) 
-*.ueD2D*[*].mobility.initialY = uniform(305m,340m) # d <= 46,1m
-*.ueCell*[*].mobility.initialX = uniform(150m,250m)
-*.ueCell*[*].mobility.initialY = uniform(300m,400m)
+*.eNodeB.mobility.initialX = 345m
+*.eNodeB.mobility.initialY = 390m
+*.ue*[*].mobility.initialX = uniform(265m,295m) 
+*.ue*[*].mobility.initialY = uniform(305m,340m) # d_d2d <= 46,1m
+#*.ueCell*[*].mobility.initialX = uniform(150m,250m)
+#*.ueCell*[*].mobility.initialY = uniform(300m,400m)
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 
-*.numUeD2DTx_FULBUF = ${n=5..15 step 5}
+*.numUeD2DTx_FULBUF = ${n=10..30 step 10}
 *.numUeD2DRx_FULBUF = ${n}
 *.numUeCellTx_FULBUF = ${n}
 *.numUeCellRx_FULBUF = ${n}
